# CommuCraft-AI

./: .env  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_V2.md  README.md  SETUP.md  main.py  pyproject.toml
data/: user_profile.json
data/daily_content/: 2026-03-24.json  2026-03-30.json  2026-04-01.json
data/pdf_content/: 2026-04-01.html
src/commucraft_ai/: config.py  main.py
src/commucraft_ai/agent/: daily_learning_agent.py  query_agent.py
src/commucraft_ai/prompts/: daily_learning.py
src/commucraft_ai/storage/: __init__.py  confluence_storage.py  daily_storage.py  memory_system.py  pdf_generator.py
src/commucraft_ai/utils/: logger.py  markdown_formatter.py  retry_handler.py  slack_messenger.py
src/sc_bot/: __init__.py  config.py  error_handling.py  scheduler.py
src/sc_bot/agent/: __init__.py  base_agent.py
src/sc_bot/storage/: __init__.py  json_storage.py
src/sc_bot/tasks/: __init__.py  daily_learning.py  meeting_prep.py  message_rewriter.py
src/sc_bot/utils/: __init__.py  google_tts.py
tests/: conftest.py  test_daily_agent.py  test_error_handling.py  test_markdown_formatter.py  test_scheduler.py  test_storage.py
