[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commu-craft-ai"
version = "0.1.0"
description = "AI-powered daily communication improvement system for professional development"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.1",
    "google-generativeai>=0.3.0",
    "google-cloud-texttospeech>=2.14.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "pydantic-settings>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sc_bot"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length is handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.7",
]
